log.txt
(multimodal-emotion) D:\research\2025_iris_taufik\MultimodalEmoLearn-CNN-LSTM>python src\training\optimized_train_late_fusion.py
  File "D:\research\2025_iris_taufik\MultimodalEmoLearn-CNN-LSTM\src\training\optimized_train_late_fusion.py", line 149
    results.append((weight_cnn, accuracy))\n        \n        print(f\"CNN Weight: {weight_cnn:.1f}, Landmark Weight: {1-weight_cnn:.1f}, Accuracy: {accuracy:.4f}\")\n    \n    return results
                                           ^
SyntaxError: unexpected character after line continuation character